# nlp

./: .gitignore  README.md  eda_data_cleaning.py  eda_long_paragraphs.py  eda_lss_profiling.py  eda_short_paragraphs.py  eda_statistical_profiling.py  eval.sh  pyproject.toml  sanity_check.py  submit.sh  submit_ensemble.sh  submit_eval.sh  submit_inference.sh  submit_kfold.sh  submit_tune.sh
BestModel/: README.md  dev.txt  model.pth  test.txt
BestModel/src/: debug_math.py  evaluate_ensemble.py  generate_submission.py  main.py  model.py  train_kfold.py  tune.py
eda/: eda_data_cleaning.py  eda_long_paragraphs.py  eda_lss_profiling.py  eda_short_paragraphs.py  eda_statistical_profiling.py
src/: data_loader.py  evaluate.py  evaluate_ensemble.py  generate_submission.py  main.py  train_kfold.py  verify_dev_score.py
tests/: test_data.py  test_model.py
